--- a/templates/catalog/catalog.html
+++ b/templates/catalog/catalog.html
@@ -54,11 +54,11 @@
                             <div class="product-details">
                                 <div class="category-wrap">
                                     <div class="category-list">
-                                        <a href="" class="product-category">{{ product.category }}</a>
+                                        <a href="{% url 'catalog:catalog' product.id %}" class="product-category">{{ product.category }}</a>
                                     </div>
                                 </div>
                                 <div class="product-title">
-                                    <a href="" title="" style="white-space: normal">{{ product.name }}</a>
+                                    <a href="{% url 'catalog:product' product.id %}" title="" style="white-space: normal">{{ product.name }}</a>
                                 </div>
                                 <div class="price-box">
                                     <span class="product-price">{{ product.price }}</span>
