--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -11,9 +11,9 @@
             <div class="home-slide" class="owl-lazy">
                 <img class="owl-lazy" src="{% static 'images/lazy.png' %}" data-src="" alt="slider image">
                 {% if forloop.counter|divisibleby:2 %}
-                    <img src="{% static 'images/slider/slide2.jpg' %}">
+                    <img src="{% static 'images/slider/slide_2.jpg' %}">
                 {% else %}
-                    <img src="{% static 'images/slider/slide1.jpg' %}">
+                    <img src="{% static 'images/slider/slide_1.jpg' %}">
                 {% endif %}
                 <div class="home-slide-content">
                     <div class="container">
