--- a/templates/catalog/product.html
+++ b/templates/catalog/product.html
@@ -61,44 +61,38 @@
                     </div><!-- End .col-lg-9 -->
                 </div><!-- End .row -->
             </div><!-- End .container -->
-            {% for element in similar_products %}
-            <div class="featured-section">
-                <div class="container">
-                    <div class="product-panel">
-                        <h2 class="section-title">ПОХОЖИЕ ТОВАРЫ</h2>
+            <section class="container mb-2" style="position : relative;">
+                <div class="product-panel">
+                    <h2 class="section-title">Похожие товары</h2>
+                    <div class="row row-sm w-100">
+                    {% for element in similar_products %}
+                    <div class="col-6 col-md-4">
+                        <div class="product-default inner-quickview inner-icon">
+                            <figure>
+                                <a href="">
+                                    <img src="{{ element.image_set.first.image.url }}">
+                                </a>
+                                <div class="btn-icon-group">
+                                    <a href=""><button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal"><i class="icon-bag"></i></button></a>
+                                </div>
 
-                        <div class="row row-sm product-ajax-grid">
-
-                                    <div class="col-4 col-md-3">
-                                        <div class="product-default inner-quickview inner-icon">
-                                            <figure>
-                                                <a href="">
-                                                    <img src="{{ element.image_set.first.image.url }}">
-                                                </a>
-                                                <div class="btn-icon-group">
-                                                    <a href=""><button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal"><i class="icon-bag"></i></button></a>
-                                                </div>
-                                            </figure>
-                                            <div class="product-details">
-                                                <div class="category-wrap">
-                                                    <div class="category-list">
-                                                        <a href="" class="product-category">{{ element.category }}</a>
-                                                    </div>
-                                                </div>
-                                                <h class="product-title">
-                                                    <a target="_blank" href="" title="" style="white-space: normal">{{ element.name }}</a>
-                                                </h>
-                                                <div class="price-box">
-                                                    <span class="product-item-price">{{ element.price }}</span>
-                                                </div><!-- End .price-box -->
-                                            </div><!-- End .product-details -->
-                                        </div>
-                                    </div>
-                                    {% endfor %}
+                            </figure>
+                            <div class="product-details">
+                                <div class="category-list">
+                                    <a href="" class="product-category">{{ element.category }}</a>
+                                </div>
+                                <h2 class="product-title">
+                                    <a href="">{{ element.name }}</a>
+                                </h2>
+                                <div class="price-box">
+                                    <span class="product-price">{{ element.price }}</span>
+                                </div><!-- End .price-box -->
+                            </div><!-- End .product-details -->
                         </div>
-                        <a class="btn btn-primary" href="" role="button">Смотреть все товары</a>
                     </div>
-                </div><!-- End .container -->
-            </div><!-- End .featured-section -->
+                    {% endfor %}
+        </section>
+            <a class="btn btn-primary" href="{% url 'catalog:catalog' %}" role="button">Смотреть все товары</a>
+
         </main><!-- End .main -->
 {% endblock content %}
